--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,16 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.2.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.4.Final</version>
+        </dependency>
     </dependencies>
     <packaging>war</packaging>
 </project>
