--- a/src/main/resources/message/label.properties
+++ b/src/main/resources/message/label.properties
@@ -30,4 +30,12 @@ login.btn = 로그인하기
 
 idPasswordNotMatching = 아이디 또는 패스워드를 다시 확인하세요
 
-login.done = 로그인 성공
+login.done = {0}님 ({1}) 로그인 성공
+
+change.pwd.title = 비밀번호 변경
+currentPassword = 현재 비밀번호
+newPassword = 새 비밀번호
+change.btn = 변경하기
+change.pwd.done = 패스워드 변경 완료
+
+notMatching.currentPassword = 현재 비밀번호가 맞지 않습니다.
