--- a/src/main/resources/message/label.properties
+++ b/src/main/resources/message/label.properties
@@ -39,3 +39,6 @@ change.btn = 변경하기
 change.pwd.done = 패스워드 변경 완료
 
 notMatching.currentPassword = 현재 비밀번호가 맞지 않습니다.
+rememberEmail = 이메일 기억하기
+
+typeMismatch.java.time.LocalDateTime = 잘못된 형식입니다.
