--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,16 @@
             <artifactId>hibernate-validator</artifactId>
             <version>6.1.4.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
     <packaging>war</packaging>
 </project>
